--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -40,7 +40,7 @@
           <li><a href="#">Trending</a></li>
           <li><a href="#">Categories</a></li>
         </ul>
-        <div class="backdrop active"></div>
+        <!-- <div class="backdrop active"></div> -->
       </nav>
 
       <div class="menu-button">
